--- a/finlib-frontend/package.json
+++ b/finlib-frontend/package.json
@@ -10,20 +10,29 @@
     "start": "node server.cjs"
   },
   "devDependencies": {
-    "vite": "^7.2.2"
+    "vite": "^5.4.21"
   },
   "main": "index.js",
   "dependencies": {
     "@vaadin/button": "^24.9.5",
+    "@vaadin/item": "^24.9.5",
+    "@vaadin/list-box": "^24.9.5",
+    "@vaadin/number-field": "^24.9.5",
+    "@vaadin/select": "^24.9.5",
     "@vaadin/text-field": "^24.9.5",
+    "@vitejs/plugin-react": "^5.1.1",
     "esbuild": "^0.25.12",
     "express": "^5.1.0",
     "fdir": "^6.5.0",
+    "firebase": "^12.6.0",
     "firebase-admin": "^13.6.0",
     "nanoid": "^3.3.11",
     "picocolors": "^1.1.1",
     "picomatch": "^4.0.3",
     "postcss": "^8.5.6",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.9.6",
     "rollup": "^4.53.2",
     "source-map-js": "^1.2.1",
     "tinyglobby": "^0.2.15"
