--- a/finlib-frontend/package.json
+++ b/finlib-frontend/package.json
@@ -31,6 +31,7 @@
     "picomatch": "^4.0.3",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6",
     "rollup": "^4.53.2",
